--- a/index.html
+++ b/index.html
@@ -174,7 +174,50 @@ button:active {
                             </td>
                         </tr>
                     `;
+                    
+                    function deleteData(id){
+                        fetch(`/delete/${id}`, { method: 'DELETE' })
+                            .then(response => response.json())
+                            .then(data => {
+                                alert(data.message);
+                                fetchData();
+                            });
+                    }
 
+                    function updateData(id){
+                        const row = document.querySelector(`button[onClick="updateData(${id})"]`).parentNode.parentNode;
+                        const nome = row.cells[0].textContent;
+                        const email = row.cells[1].textContent;
+                        const telefone = row.cells[2].textContent;
+                        fetch(`/update/${id}`, {
+                            method: 'PUT',
+                            headers: {
+                                'Content-Type': 'application/json'
+                            },
+                            body: JSON.stringify({nome, email, telefone})
+                        })
+                            .then(response => response.json())
+                            .then(data =>{
+                                alert(data.message);
+                                fetchData();
+                            });
+                    }
+
+                    document.getElementById('contactForm').addEventListener('submit', function(e)){
+                    e.preventDefault();
+                    const formData = new FormData(e.target);
+                    const data = Object.fromEntries(formData.entries());
+                    fetch('/submit', {
+                        method: 'POST',
+                        headers:{
+
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify(data)
+
+                        
+                    })
+                    }
                 });
             })
         }
